tests/negative/regression/r6.orng
// r6.orng:5:20: error: error: expected a compile-time constant type, got function
// fn () -> (_ = Bool, _ = String) {}
//                   ^
// 
fn () -> (_ = Bool, _ = String) {}